# Intel-Galileo-Gen2-FreeRTOS

./: CMakeLists.txt  README.md  build_debug.sh  debug.sh  openocd_start.sh  program.sh
cmake/: compiler.cmake  size.cmake
common/: CMakeLists.txt
freertos_demo/: CMakeLists.txt  GPIO_I2C.c  GPIO_I2C.h  elf_ia32_efi.lds  galileo-support.c  galileo_gen_defs.h  galileo_support.h  main.c  main_blinky.c
