MESSAGE("ENTER ${CMAKE_CURRENT_SOURCE_DIR}")

# get module name
GET_FILENAME_COMPONENT(LIB_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)

# include header file
INCLUDE_DIRECTORIES(${COMMON_INCLUDE_DIRECTORY})

# Collect all source file
FILE (GLOB COMMON_SRC *.c)

# build library
ADD_LIBRARY (${LIB_NAME} ${COMMON_SRC})

# append current library to the linked libraries
SET(LINKED_LIBRARIES ${LINKED_LIBRARIES} ${LIB_NAME})
SET(LINKED_LIBRARIES ${LINKED_LIBRARIES} PARENT_SCOPE)
